--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
 body {
+    display: flex;
+    flex-direction: column;
     background-color: lightblue;
+
 }
 
 #busqueda {
@@ -12,18 +15,21 @@ body {
     margin: 10px 10px 10px 10px;
 }
 
+
+
 header {
-    border-width: 5;
+    display: flex;
+    position: absolute;
+    top: 2%;
+    border-width: 2;
     border-style: solid;
-    border-radius: 5px;
-    width: 100%;
+    width: 95%;
 }
 
 footer {
-    border-width: 5;
-    border-style: solid;
-    border-radius: 5px;
     position: absolute;
-    width: 100%;
-    bottom: 0;
+    bottom: 2%;
+    border-width: 2;
+    border-style: solid;
+    width: 95%;
 }
